--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "swiper": "^6.4.15",
