--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -20,11 +21,14 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@swimlane/ngx-datatable": "^20.0.0",
+    "express": "^4.17.3",
     "ng-wizard": "^1.3.0",
     "ngx-bootstrap": "^6.2.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "swiper": "^6.4.15",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -45,5 +50,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
+  },
+  "engines": {
+    "node": "14.15.0",
+    "npm": "8.5.4"
   }
 }
