--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@gsa-sam/ngx-uswds": "^12.0.0",
     "@swimlane/ngx-datatable": "^20.0.0",
     "express": "^4.17.3",
     "ng-wizard": "^1.3.0",
