--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@gsa-sam/ngx-uswds": "^12.0.0",
+    "@okta/okta-angular": "^5.3.0",
+    "@okta/okta-auth-js": "^7.0.0",
     "@swimlane/ngx-datatable": "^20.0.0",
     "express": "^4.17.3",
     "ng-wizard": "^1.3.0",
